--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,7 @@
 
   <groupId>jdbfs_QTM</groupId>
   <artifactId>jdbfs_QTM</artifactId>
+  
   <version>0.0.1-SNAPSHOT</version>
   
   <packaging>jar</packaging>
@@ -11,16 +12,28 @@
   <properties>
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
+    <junit-jupiter.version>5.8.2</junit-jupiter.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   
   <dependencies>
   	<dependency>
   		<groupId>org.junit.jupiter</groupId>
   		<artifactId>junit-jupiter-api</artifactId>
-  		<version>5.8.2</version>
+  		<version>${junit-jupiter.version}</version>
   		<scope>test</scope>
   	</dependency>
   </dependencies>
+  
+  <build>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.0.0-M6</version>
+        </plugin>
+    </plugins>
+</build>
   
   <ciManagement>
   	<url>192.168.143.34:9000</url>
