--- a/pom.xml
+++ b/pom.xml
@@ -76,8 +76,15 @@
 					</systemPropertyVariables>
 				</configuration>
 			</plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>jdepend-maven-plugin</artifactId>
+        <version>2.0</version>
+      </plugin>
 		</plugins>
 	</build>
+	
+	
 
 	<ciManagement>
 		<url>192.168.143.34:7080</url>
